--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="font_size_title">20dp</dimen>
+    <dimen name="font_size_title_group">20dp</dimen>
+    <dimen name="font_size_item">18dp</dimen>
 </resources>
